fix(z-index): fixed z-indexing of WebGL render

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 
 .unity-player-main {
+	z-index: -1;
 	width: 100%;
 	height: 100%;
 	position: relative;
